# tacker

./: .coveragerc  .gitignore  .gitreview  .pylintrc  .stestr.conf  .testr.conf  .zuul.yaml  CONTRIBUTING.rst  HACKING.rst  MANIFEST.in  README.rst  TESTING.rst  bindep.txt  lower-constraints.txt  openstack-common.conf  requirements-extra.txt  requirements.txt  run_tests.sh  setup.cfg  test-requirements.txt  tox.ini  upper-constraints.txt
api-ref/source/: conf.py  index.rst
contrib/tacker-config/: ns-clean.sh  ns-config.sh  vnffg-clean.sh  vnffg-config.sh
devstack/: README.rst  local.conf.example  local.conf.kubernetes  local.conf.standalone  local.sh.mysql_fix  plugin.sh  settings  vim_config.yaml
devstack/lib/: download_upper_consts  kubernetes_vim  tacker
devstack/samples/: config-openwrt-with-firewall.yaml  local.conf.example  local.sh.mysql_fix  sample-tosca-vnfd-flavor.yaml  sample-tosca-vnfd-http-monitor.yaml  sample-tosca-vnfd-image.yaml  sample-tosca-vnfd-monitor.yaml  sample-tosca-vnfd-multi-vdu.yaml  sample-tosca-vnfd-numacount.yaml  sample-tosca-vnfd-vcpu-topology.yaml  sample-tosca-vnfd.yaml  sample-vnfd-monitor.yaml  sample-vnfd.yaml  tosca-config-openwrt-with-firewall.yaml  tosca_openwrt.yaml  vnf_cirros_template_ipaddr.yaml
doc/: requirements.txt
doc/source/: conf.py  index.rst
etc/: config-generator.conf  tacker-policy-generator.conf
etc/ceilometer/: maintenance_event_types.yaml
etc/init.d/: tacker-server
etc/tacker/: README-policy-yaml.txt  README.txt  api-paste.ini  enhanced_tacker_policy.yaml.sample  policy.json  prometheus-plugin.yaml  rootwrap.conf  tacker.conf
playbooks/devstack/: post.yaml  pre.yaml  run.yaml
releasenotes/notes/: Correct-handling-for-PENDING_DELETE-VNFs-7f6becfa36cc38d2.yaml  add-VNF-to-monitor-after-restarting-tacker-cf953f8b3bf2a6ba.yaml  add-allowed_address_pairs-support-for-Tacker-73f5d476a54b4182.yaml  add-block-storage-support-to-tacker-5c349ba112a3c087.yaml  add-key-name-support-to-tosca-nodes-nfv-VDU-Tracker-bf415eaf6eb13c0d.yaml  add-multi-version-api-support-0653df1edb67162e.yaml  add-multiple-classifiers-05d0ee3708bfd4df.yaml  add-names-to-classifiers-ad6e9bf65d68a741.yaml  add-ns-vnffg-inline-template-a2eadd76495ccf63.yaml  add-parameter-support-vnffg-b6b790b2f4590a91.yaml  add-reservation-policy-support-0a197cfc7659cddf.yaml  add-reuse-vnf-when-create-vnffg-7c4fd1bde2270be1.yaml  add-sample-ansible-driver-f204be6350c8a546.yaml  add-security-groups-support-to-tosca-template-b4d9dec71400eebf.yaml  add-support-containerised-vnfs-4885e45017a79a20.yaml  add-support-nsh-encapsulation-7587127e4201fa26.yaml  add-support-vnf-autohealing-by-faultnotification-ae639a6dc0b02602.yaml  add-symmetrical-as-property-forwarding-path-b7e6568b19ece356.yaml  add-terraform-infra-driver-change-vnfpkg-087413812aca9a1f.yaml  add-upgrade-check-framework-33d6e16e24a50207.yaml  add-v2-change-vnfpkg-api-7f993cf283a53aab.yaml  add-v2-change_ext_conn-api-1fe3ca0e889eea93.yaml  add-v2-cnf-api-a938c17b5c57fb67.yaml  add-v2-fail-api-b35b605f262210b2.yaml  add-v2-heal-api-1ffd18dea3904966.yaml  add-v2-modify-api-cf7bce9e9d5bca31.yaml  add-v2-retry-api-34667d944db1f54c.yaml  add-v2-rollback-api-1b53e7b9c89d5281.yaml  add-v2-scale-api-b60e8fe329f6038b.yaml  add-vdu-autoheal-action-42dd5f23c5ba8d34.yaml  add-vim-monitor-to-tacker-3bccceaeb2ef6989.yaml  add-vnf-details-api-b38a225d0020b812.yaml  add-vnf-forwarding-graph-9c6cd9c52592d271.yaml  add-vnfc-support-to-tosca-template-f8e34334ba823f34.yaml  alarm-based-monitoring-7d0f2338409d6d9f.yaml  antelope-prelude-32ccfadf5a690a75.yaml  apply-robot-framework-for-testing-d04256887fd9bee7.yaml  assign-floating-ip-to-vdu-50fe2a2d792db6c0.yaml  attach-existing-volume-67d58cf4a8c5cb66.yaml  bobcat-terraform-driver-08d528b8447ef3be.yaml  (+128 more)
releasenotes/source/: conf.py  index.rst
samples/legacy-templates/: README.warning  openwrt.yaml  sample-vnfd-http-monitor.yaml  sample-vnfd-multi-vdu.yaml  sample-vnfd.yaml  vnf_cirros_template_user_data.yaml
samples/mgmt_driver/: install_helm.sh  install_k8s_cluster.sh  kubernetes_mgmt.py  private_registry_mgmt.py
samples/vim/: vim_config.yaml
samples/vnf_packages/: README
tacker/: __init__.py  _i18n.py  alarm_receiver.py  auth.py  context.py  i18n.py  manager.py  oslo_service.py  policy.py  service.py  version.py  wsgi.py
tacker/agent/: rpc.py
tacker/api/: api_common.py  extensions.py  versions.py
tacker/cmd/: __init__.py  server.py  status.py
tacker/common/: clients.py  cmd_executer.py  config.py  constants.py  coordination.py  crypt_utils.py  csar_utils.py  driver_manager.py  eventlet_utils.py  exceptions.py  ext_oauth2_auth.py  log.py  oidc_utils.py  rpc.py  rpc_compat.py  test_lib.py  topics.py  utils.py
tacker/conductor/: conductor_server.py
tacker/conf/: __init__.py  conductor.py  coordination.py  opts.py  policy.py  vnf_lcm.py  vnf_package.py
tacker/db/: api.py  db_base.py  model_base.py  models_v1.py  models_v2.py  sqlalchemyutils.py  types.py
tacker/extensions/: common_services.py  nfvo.py  servicevm.py  vnflcm.py  vnfm.py
tacker/glance_store/: store.py
tacker/hacking/: checks.py
tacker/keymgr/: __init__.py  barbican_key_manager.py  exception.py  key_manager.py
tacker/locale/: tacker.pot
tacker/mistral/: mistral_client.py  workflow_generator.py
tacker/nfvo/: nfvo_plugin.py
tacker/objects/: __init__.py  base.py  cancel_mode.py  change_ext_conn_req.py  common.py  fields.py  grant.py  grant_request.py  heal_vnf_request.py  instantiate_vnf_req.py  scale_vnf_request.py  terminate_vnf_req.py  vim_connection.py  vnf.py  vnf_artifact.py  vnf_deployment_flavour.py  vnf_instance.py  vnf_instantiated_info.py  vnfd.py  (+7 more)
tools/: README.rst  check_i18n.py  clean.sh  gen_vim_config.sh  gen_vnf_pkg.py  generate_config_file_sample.sh  i18n_cfg.py  install_venv.py  install_venv_common.py  link_validate.py  link_validate_config.conf  prepare_functional_test.sh  sync_test_requirements.py  test-setup-default-vim.sh  test-setup-fake-prometheus-server.sh  test-setup-k8s-vim.sh  test-setup.sh  with_venv.sh
zuul.d/: nodeset.yaml  project.yaml
(+2566 files in other folders)
